<?xml version="1.0"?>
<package>
    <name>grassfire</name>
    <version>0.0.1</version>
    <description>
        Implementation of the Grassfire algorithm for 3D collision avoidance
    </description>
    <maintainer email="wallar@mit.edu">Alex Wallar</maintainer>
    <author email="wallar@mit.edu">Alex Wallar</author>
    <license>GPLv2</license>
    <url type="website">http://github.com/wallarelvo/grassfire</url>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <export></export>
</package>
